--- a/css/range-slider.css
+++ b/css/range-slider.css
@@ -1,16 +1,3 @@
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-}
-
-h1 {
-    font-family: sans-serif;
-}
-
 .slider {
     -webkit-appearance: none;
     width: 50%;
